# erlang-json

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  README.md  bootstrap  configure.ac  eep0018v2.txt  rebar  rebar.config  test.es
c_src/: decode.c  encode.c  erl_nif_compat.h  json.c
c_src/yajl/: yajl_gen.c  yajl_gen.h
doc/html/: json.html  overview-summary.html
doc/md/: json.md
ebin/: json.app
erl/: runner.erl
src/: Makefile  Makefile.Darwin  Makefile.Linux  Makefile.am  decode_json.c  eep0018.async.c  eep0018.async.erl  eep0018.c  eep0018.erl  eep0018.h  ei_bin_buf.c  ei_bin_buf.h  json.app.src  json.erl  json_fuzz.erl  json_to_term.c  term_buf.c  term_buf.h  term_to_json.c  yajl_encode.c  yajl_encode.h  yajl_gen.c  yajl_gen.h  yajl_parse.h  yajl_parser.c
test/: 001-yajl-tests.t  002-literals.t  008-comment.t  json_tests.erl  util.erl
tests/: Makefile  Makefile.am  compare.erl  runner.erl
