## Copyright (c) 2008-2009 Paul J. Davis <paul.joseph.davis@gmail.com>
## Copyright (c) 2008-2009 Enrico Thierbach <eno@open-lab.org>
##
## This file is part of EEP0018, which is released under the MIT license.

SUBDIRS = src tests
TESTDIR = tests

ACLOCAL_AMFLAGS = -I m4

test: all
	@make test -s -C $(TESTDIR)
